# ORT_Projects

SCRFD/: CMakeLists.txt  run.sh  scrfd.cpp
